# StarManager

./: .gitignore  FIXES.md  LICENSE  README.md  analyze_diagnostic.py  analyze_scheduler.py  check_scheduler_health.bat  check_scheduler_health.sh  db.py  keyboard.py  load_messages.py  main.py  messages.py  monitor.py  pyproject.toml  runscheduler.py  runtg.py  setup_watchdog.bat  setup_watchdog.sh  startup.sh  tables.py  test_health.py  watchdog.py
Bot/: __init__.py  action_handlers.py  add_msg_count.py  answers_handlers.py  bot.py  checkers.py  comment_handlers.py  dailyplan.py  exception_handler.py  global_warn_handler.py  labelers.py  like_handlers.py  main.py  megadrive.py  message_handlers.py  middlewares.py  nightmode.py  notifications.py  payload_handlers.py  reaction_handlers.py  rules.py  scheduler.py  scheduler_functions.py  tgbot.py  utils.py
BotTG/: __init__.py  bot.py  handlers.py  keyboard.py  main.py  middlewares.py  scheduler.py  states.py  utils.py
config/: config.py  config2.py
dev/: alterkicked.py  claearnulls.py  clear6digitplustables.py  cleargroupownertables.py  clearleaved.py  clearowners.py  config.py  delalltables.py  delduplicateusers.py  deletewrongnicknames.py  delpool.py  giveowners.py  indexing.py  oldtonewdb.py  set-last_causes.py  transferPtoDB.py  updatealltables.py  updatekicked.py
site/: main.py  models.py  routes.py  utils.py
star_manager(django,old)/: manage.py
tests/: __init__.py  conftest.py  test_access_level_manager.py  test_chatusercmids_manager.py  test_custom_access_level_manager.py  test_event_cache.py  (+2 more)
(+244 files in other folders)
